--- a/compositional_skills/STEM/math/bedmass/qna.yaml
+++ b/compositional_skills/STEM/math/bedmass/qna.yaml
@@ -1,4 +1,4 @@
-created_by: Matt
+created_by: Matteo
 seed_examples:
   - answer: >-
       The expression evaluates to: ((40 / 5) + 7) * (12 - 8^2) = (8 + 7) * (12 -
