--- a/.github/workflows/coc_violation_analysis.yml
+++ b/.github/workflows/coc_violation_analysis.yml
@@ -35,5 +35,6 @@ jobs:
       - name: "Invoke insight handler"
         id: run_insights
         run: |
+          echo "${{ toJSON(github.event) }}"
           curl -X 'POST' "https://pr-analysis-handler.1fuhf5gskmng.us-east.codeengine.appdomain.cloud/analyze-pr?pr_number=${{ github.event.workflow_run.pull_requests[0].number }}&owner=${{ github.repository_owner }}&repo=${{ github.event.repository.name }}" -H 'accept: application/json' -H 'Authorization: Bearer ${{ secrets.COC_ANALYSIS_TOKEN }}' -d '' &
           echo "CoC violation analysis triggered"
