--- a/knowledge/astronomy/constellations/Phoenix/qna.yaml
+++ b/knowledge/astronomy/constellations/Phoenix/qna.yaml
@@ -1,4 +1,4 @@
-created_by: 
+created_by: flyingbarron
 domain: constellation
 seed_examples:
 - question: When was the constellation Phoenix defined? 
