Updated created_by field
Signed-off-by: BladesOfSteele <71097376+BladesOfSteele@users.noreply.github.com>

--- a/knowledge/animals/indian_elephant/qna.yaml
+++ b/knowledge/animals/indian_elephant/qna.yaml
@@ -1,4 +1,4 @@
-created_by: Mark
+created_by: BladesOfSteele
 domain: animals
 seed_examples:
 - answer: The Indian elephant is native to mainland Asia with nearly three-fourth of the population found in India.
