Fix source document
Signed-off-by: Grillo del Mal <grillo@delmal.cl>

--- a/knowledge/pop_culture/olivia_benson/qna.yaml
+++ b/knowledge/pop_culture/olivia_benson/qna.yaml
@@ -22,4 +22,4 @@ document:
   repo: https://github.com/juliadenham/Summit_knowledge
   commit: 481b735225e2714c4e9d36da6d7b941d9a36bd86
   patterns:
-    - wisdom_tooth.md
+    - olivia_benson_swift.md
