fix: fix lint errors
Signed-off-by: Jeff MAURY <jmaury@redhat.com>

--- a/compositional_skills/extraction/information/numeric-entities/geo-coordinates-numeric/qna.yaml
+++ b/compositional_skills/extraction/information/numeric-entities/geo-coordinates-numeric/qna.yaml
@@ -15,4 +15,4 @@ seed_examples:
 - answer: '41.90238, 12.45393'
   context: "The St Peter's basilic is located at 41.90238, 12.45393"
   question: Extract the geographic coordinates in the given text.
-task_description: ''
+task_description: 'Extract geographic coordinates'
