--- a/.github/workflows/stale_bot.yml
+++ b/.github/workflows/stale_bot.yml
@@ -1,23 +1,49 @@
+# SPDX-License-Identifier: Apache-2.0
+
 name: 'Close stale issues and PRs'
 on:
   schedule:
     - cron: '30 1 * * *'
 
+env:
+  LC_ALL: en_US.UTF-8
+
+defaults:
+  run:
+    shell: bash
+
 permissions:
-  issues: write
-  pull-requests: write
+  contents: read
 
 jobs:
   stale:
+    permissions:
+      issues: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/stale@v9
+      - name: "Harden Runner"
+        uses: step-security/harden-runner@a4aa98b93cab29d9b1101a6143fb8bce00e2eac4 # v2.7.1
         with:
+          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
+
+      - name: "Stale Action"
+        uses: actions/stale@28ca1036281a5e5922ead5184a1bbf96e5fc984e # v9.0.0
+        with:
+          stale-issue-label: 'stale'
+          stale-issue-message: >
+            This issue has been automatically marked as stale because it has not had activity within 60 days.
+            It will be automatically closed if no further activity occurs within 31 days.
+          close-issue-message: >
+            This issue has been automatically closed due to inactivity.
+          days-before-issue-stale: 60
+          days-before-issue-close: 31
           stale-pr-label: 'stale'
           stale-pr-message: >
-            This pull request has been automatically marked as stale because it has not had activity within 90 days.
-            It will be automatically closed if no further activity occurs within 30 days.
+            This pull request has been automatically marked as stale because it has not had activity within 15 days.
+            It will be automatically closed if no further activity occurs within 31 days.
           close-pr-message: >
             This pull request has been automatically closed due to inactivity.
-          days-before-stale: 90
-          days-before-close: 30
+          days-before-pr-stale: 15
+          days-before-pr-close: 31
+          exempt-pr-labels: triage-approved
