--- a/knowledge/sports/athletes/caitlin_clark/qna.yaml
+++ b/knowledge/sports/athletes/caitlin_clark/qna.yaml
@@ -1,4 +1,4 @@
-created_by: bob longmore
+created_by: boblongmore
 domain: anatomy
 seed_examples:
 - answer: Iowa
@@ -16,4 +16,4 @@ document:
  repo: https://github.com/juliadenham/Summit_knowledge
  commit: 481b735225e2714c4e9d36da6d7b941d9a36bd86
  patterns:
-  - wisdom_tooth.md
+  - caitlin_clark.md
