Signed-off-by: Bob Longmore <robertlongmore@gmail.com>
Signed-off-by: boblongmore <robertlongmore@gmail.com>

--- a/knowledge/sports/athletes/caitlin_clark/qna.yaml
+++ b/knowledge/sports/athletes/caitlin_clark/qna.yaml
@@ -1,5 +1,5 @@
 created_by: boblongmore
-domain: anatomy
+domain: sports
 seed_examples:
 - answer: Iowa
   question: Where did Caitlin Clark go to college?
