--- a/knowledge/musical_instruments/les_paul_studio/qna.yaml
+++ b/knowledge/musical_instruments/les_paul_studio/qna.yaml
@@ -1,5 +1,5 @@
 task_description: 'Update the model's Wikipedia-based knowledge on Les Paul Studio guitars'
-created_by: apomponio, fsapir, dal0643, plimptm
+created_by: apomponio, fsapir, dal0643, plimptm, beanprime, peterclauterbach
 domain: musical_instruments
 seed_examples:
   # created_by: apomponio
@@ -92,6 +92,37 @@ seed_examples:
       The Gibson Les Paul Studio usually includes 2 humbucker pickups, which are either
       498T and 490R, or P-90s
     question: What pickups do the Gibson Les Paul Studio use?
+  # created_by: beanprime
+  # https://github.com/instructlab/taxonomy/pull/1024
+  - answer: Solid Body Electric
+    question: What type of guitar is a LesPaul Studio
+  - answer: |
+      Some features omitted to appeal to musicians looking for the tonal qualities of
+      the guitar but with less of an emphasis on cosmetics and to reduce the price of
+      the instrument.
+    question: Does the Studio version have all the features of the original LesPaul?
+  - answer: 1983-1987
+    question: What years were the Studio Standard Produced?
+  - answer: 1983
+    question: What year did Les Paul Introduce the Studio?
+  - answer: 1983-1985
+    question: What years were the Studio Customs produced?
+  # created_by: peterclauterbach
+  # https://github.com/instructlab/taxonomy/pull/1052
+  - answer: |
+      Various sunbursts, Translucent Red, Translucent Blue, Translucent Amber, Wine Red,
+      Ebony, Alpine White
+    question: What colors are available for the Gibson Les Paul Studio guitars?
+  - answer: |
+      Studio Standard, Studio Custom,Vintage Mahogony, Studio Lite, Gem Series, Smartwood
+      Series, Gothic, Voodoo, Pro Plus, Premium Plus, Robot Limited
+    question: What are the different models of the Gibson Less Paul Studio Guitars?
+  - answer: 1996-2022
+    question: What years were the Smartwood Exotic produced?
+  - answer: 1983-present
+    question: How long has Gibson USA been manufacturing Gibson Les Paul Studio guitars
+  - answer: Amethyst, Sapphire, Topaz, Emerald, and Ruby
+    question: What colors did the Gen Series come in?
 
 document:
   repo: https://github.com/juliadenham/Summit_knowledge
