--- a/knowledge/musical_instruments/les_paul_studio/qna.yaml
+++ b/knowledge/musical_instruments/les_paul_studio/qna.yaml
@@ -1,4 +1,4 @@
-task_description: 'Update the model's Wikipedia-based knowledge on Les Paul Studio guitars'
+task_description: 'Update the model’s Wikipedia-based knowledge on Les Paul Studio guitars'
 created_by: apomponio, fsapir, dal0643, plimptm, beanprime, peterclauterbach
 domain: musical_instruments
 seed_examples:
@@ -41,7 +41,7 @@ seed_examples:
       indistinguishable from a Les Paul Standard or Custom in the recording
       studio, and that the flashier guitars would be reserved for stage use
     question: Where does the name Studio come from?
-  - answer: |
+  - answer: >
       In 2009, the Vintage Mahogany was renamed the Les Paul Studio Faded.
     question: When was the Vintage Mahogany renamed?
   - answer: >
@@ -51,31 +51,31 @@ seed_examples:
   - answer: >
       During 2000–2002, Gibson released a series of six guitars dubbed
       "Gothic" models.
-    question: When did Gibson release the Gothic models
+    question: When did Gibson release the Gothic models?
   # created_by: dal0643
   # https://github.com/instructlab/taxonomy/pull/964
-  - question: What year was the Studio Custom produced
+  - question: What year was the Studio Custom produced?
     answer: The Studio Custom was produced in 1983–1985
-  - question: What is Vintage Mahogany/Faded
+  - question: What is Vintage Mahogany/Faded?
     answer: In 2009, the Vintage Mahogany was renamed the Les Paul Studio Faded
-  - question: What is a Gibson Studio Pro Plus
+  - question: What is a Gibson Studio Pro Plus?
     answer: The Studio Pro Plus was an upgraded studio with a AA figured maple top and gold hardware.
-  - question: What is a Robot Les Paul Studio Limited
+  - question: What is a Robot Les Paul Studio Limited?
     answer: The Robot Les Paul Studio Limited was an upgraded studio with Powertune auto-tuning system.
-  - question: When was the Gibson Gothic Produced
+  - question: When was the Gibson Gothic Produced?
     answer: During 2000–2002, Gibson released a series of six guitars dubbed "Gothic" models.
   # created_by: dal0643
   # https://github.com/instructlab/taxonomy/pull/1098
   - answer: The Studio Custom was produced in 1983–1985
-    question: What year was the Studio Custom produced
+    question: What year was the Studio Custom produced?
   - answer: In 2009, the Vintage Mahogany was renamed the Les Paul Studio Faded
-    question: What is Vintage Mahogany/Faded
+    question: What is Vintage Mahogany/Faded?
   - answer: The Studio Pro Plus was an upgraded studio with a AA figured maple top and gold hardware.
-    question: What is a Gibson Studio Pro Plus
+    question: What is a Gibson Studio Pro Plus?
   - answer: The Robot Les Paul Studio Limited was an upgraded studio with Powertune auto-tuning system.
-    question: What is a Robot Les Paul Studio Limited
+    question: What is a Robot Les Paul Studio Limited?
   - answer: During 2000–2002, Gibson released a series of six guitars dubbed \"Gothic\" models.
-    question: When was the Gibson Gothic Produced
+    question: When was the Gibson Gothic Produced?
   # created_by: plimptm
   # https://github.com/instructlab/taxonomy/pull/983
   - answer: >
@@ -106,7 +106,7 @@ seed_examples:
   # created_by: beanprime
   # https://github.com/instructlab/taxonomy/pull/1024
   - answer: Solid Body Electric
-    question: What type of guitar is a LesPaul Studio
+    question: What type of guitar is a LesPaul Studio?
   - answer: |
       Some features omitted to appeal to musicians looking for the tonal qualities of
       the guitar but with less of an emphasis on cosmetics and to reduce the price of
@@ -131,7 +131,7 @@ seed_examples:
   - answer: 1996-2022
     question: What years were the Smartwood Exotic produced?
   - answer: 1983-present
-    question: How long has Gibson USA been manufacturing Gibson Les Paul Studio guitars
+    question: How long has Gibson USA been manufacturing Gibson Les Paul Studio guitars?
   - answer: Amethyst, Sapphire, Topaz, Emerald, and Ruby
     question: What colors did the Gen Series come in?
 
