add single quotes
Signed-off-by: Josh Friesen <joshuafriesen@gmail.com>

--- a/knowledge/science/anatomy/wisdom_teeth/qna.yaml
+++ b/knowledge/science/anatomy/wisdom_teeth/qna.yaml
@@ -5,7 +5,7 @@ seed_examples:
     Although formally known as third molars,
     the common name is wisdom teeth because they
     appear so late - much later than the other teeth,
-    at an age where people are presumably "wiser" than
+    at an age where people are presumably 'wiser' than
     as a child, when the other teeth erupt.
   question: Where did the term wisdom tooth come from?
 - answer: |
